force-app/main/default/objects/Question__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description>The field type of the question determines its properties and display when presented in an Application</description>
    <inlineHelpText>The field type of the question determines its properties and display when presented in an Application</inlineHelpText>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Multiple Choice</fullName>
            </value>
            <value>
                <fullName>Long Text Area</fullName>
            </value>
            <value>
                <fullName>File Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>