force-app/main/default/objects/Question__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Help Text to present to the applicant when encountering this field in an Application</description>
    <inlineHelpText>Help Text to present to the applicant when encountering this field in an Application</inlineHelpText>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>