force-app/main/default/objects/Question__c/fields/Max_Selectable_Options__c.field-meta.xml
<CustomField>
    <fullName>Max_Selectable_Options__c</fullName>
    <description>For multiple choice and multi-select questions, the maximum number of options an applicant can select</description>
    <inlineHelpText>For multiple choice and multi-select questions, the maximum number of options an applicant can select</inlineHelpText>
    <label>Max Selectable Options</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>