force-app/main/default/objects/Question__c/fields/Min_Selectable_Options__c.field-meta.xml
<CustomField>
    <fullName>Min_Selectable_Options__c</fullName>
    <description>For multiple choice and multi-select questions, the minimum number of options an applicant can select</description>
    <inlineHelpText>For multiple choice and multi-select questions, the minimum number of options an applicant can select</inlineHelpText>
    <label>Min Selectable Options</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>