force-app/main/default/objects/Question__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <description>For multiple choice and multi-select questions, the available options for selection</description>
    <inlineHelpText>For multiple choice and multi-select questions, enter the values that the applicant can select from. Enter each distinct value on a separate line.</inlineHelpText>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>